add boxing game

--- a/rpslS.html
+++ b/rpslS.html
@@ -39,6 +39,9 @@
           <li class="nav-item active">
             <a class="nav-link" href="rpslS.html">Rock Paper Scissors</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://rjlafazan.github.io/week-4-game-crystal/index.html">Boxing Game</a>
+          </li>
         </ul>
       </div>  
     </nav>
