--- a/rpslS.html
+++ b/rpslS.html
@@ -25,13 +25,7 @@
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="https://rjlafazan.github.io/Bootstrap-Portfolio/index.html">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="https://rjlafazan.github.io/Bootstrap-Portfolio/portfolio.html">Portfolio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="https://rjlafazan.github.io/Bootstrap-Portfolio/contact.html">Contact</a>
+            <a class="nav-link" href="https://rjlafazan.github.io/Bootstrap-Portfolio/index.html">Portfolio Site</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="https://rjlafazan.github.io/Hangman-Game/hangman.html">Hangman</a>
