--- a/rpslS.html
+++ b/rpslS.html
@@ -1,44 +1,49 @@
 <!DOCTYPE html>
 <html lang="en-us">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
-    <title>Rock Paper Scissors Lizard Spock</title>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
-    <style type="text/css">
-      body {
-        background: url(https://d3qdvvkm3r2z1i.cloudfront.net/media/catalog/product/cache/1/image/1800x/6b9ffbf72458f4fd2d3cb995d92e8889/r/o/rockpaperscissorslizardspock_newthumb.png);
-      }
-    </style>
+  <title>Rock Paper Scissors Lizard Spock</title>
+
+  <style type="text/css">
+    body {
+      background: url(https://d3qdvvkm3r2z1i.cloudfront.net/media/catalog/product/cache/1/image/1800x/6b9ffbf72458f4fd2d3cb995d92e8889/r/o/rockpaperscissorslizardspock_newthumb.png);
+    }
+  </style>
 
 </head>
+
 <body>
   <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-      <a class="navbar-brand" href="index.html">Ryan's Game Gallery</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="collapsibleNavbar">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="https://rjlafazan.github.io/Bootstrap-Portfolio/index.html">Portfolio Site</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="https://rjlafazan.github.io/Hangman-Game/hangman.html">Hangman</a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="rpslS.html">Rock Paper Scissors</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="https://rjlafazan.github.io/week-4-game-crystal/index.html">Boxing Game</a>
-          </li>
-        </ul>
-      </div>  
-    </nav>
+    <a class="navbar-brand" href="">Ryan's Gallery</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="https://rjlafazan.github.io/Bootstrap-Portfolio/index.html">Portfolio Site</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://rjlafazan.github.io/Hangman-Game/hangman.html">Hangman</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="rpslS.html">Rock Paper Scissors</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://rjlafazan.github.io/week-4-game-crystal/index.html">Boxing Game</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://rjlafazan.github.io/week-6-API-AJAX/giphy.html">Giphy API Fun</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
 
 
   <div class="jumbotron">
@@ -48,28 +53,41 @@
     </div>
   </div>
 
-    <div class="container-fluid text-center bg-light connect-me">
+  <div class="container-fluid text-center bg-light connect-me">
     <div class="row">
       <div class="col-sm-12">
         <div class="btn-group" role="group" aria-label="Basic example">
-          <button type="button" class="btn bg-light"><a href="https://github.com/rjlafazan"><img src="assets/images/github-128.png" class="profile rounded-circle" alt="GitHub" /></a></button>
-          <button type="button" class="btn bg-light"><a href="https://www.linkedin.com/in/ryan-lafazan-351b90a/"><img src="assets/images/linkedin-128.png" class="profile rounded-circle" alt="LinkedIn" /></a></button>
-          <button type="button" class="btn bg-light"><a href="https://stackoverflow.com/users/8755639/ryan-lafazan?tab=profile"><img src="assets/images/stackoverflow-128.png" class="profile rounded-circle" alt="Stack Overflow" /></a></button>
+          <button type="button" class="btn bg-light">
+            <a href="https://github.com/rjlafazan">
+              <img src="assets/images/github-128.png" class="profile rounded-circle" alt="GitHub" />
+            </a>
+          </button>
+          <button type="button" class="btn bg-light">
+            <a href="https://www.linkedin.com/in/ryan-lafazan-351b90a/">
+              <img src="assets/images/linkedin-128.png" class="profile rounded-circle" alt="LinkedIn" />
+            </a>
+          </button>
+          <button type="button" class="btn bg-light">
+            <a href="https://stackoverflow.com/users/8755639/ryan-lafazan?tab=profile">
+              <img src="assets/images/stackoverflow-128.png" class="profile rounded-circle" alt="Stack Overflow" />
+            </a>
+          </button>
         </div>
       </div>
     </div>
-  </div><br>
-
-
-<footer class="container-fluid text-center bg-dark">
-  <div class="row">
-    <div class="col-sm-12">
-      <p>Copyright &copy; 2018 Ryan Lafazan</p>
-    </div>
   </div>
-</footer>
+  <br>
 
-      <script type="text/javascript">
+
+  <footer class="container-fluid text-center bg-dark">
+    <div class="row">
+      <div class="col-sm-12">
+        <p>Copyright &copy; 2018 Ryan Lafazan</p>
+      </div>
+    </div>
+  </footer>
+
+  <script type="text/javascript">
     // Creates an array that lists out all of the options (Rock, Paper, or Scissors).
     var computerChoices = ["r", "p", "s", "l", "S"];
 
@@ -79,7 +97,7 @@
     var ties = 0;
 
     // This function is run whenever the user presses a key.
-    document.onkeyup = function(event) {
+    document.onkeyup = function (event) {
 
       // Determines which key was pressed.
       var userGuess = event.key;
@@ -145,6 +163,7 @@
       }
     };
   </script>
-    
-  </body>
+
+</body>
+
 </html>
